==> RT-Thread/rt-thread/bsp/stm32f10x_HAL/drivers/usart.c <==
#include "board.h"
#include <rtdevice.h>

static rt_err_t stm32_configure(struct rt_serial_device *serial, struct serial_configure *cfg)
{
    struct stm32_uart *uart;
    
      RT_ASSERT(serial != RT_NULL);
      RT_ASSERT(cfg != RT_NULL);
    
      uart = (struct stm32_uart *)serial->parent.user_data;
    
      uart->huart.Init.BaudRate   = cfg->baud_rate;
      uart->huart.Init.HwFlowCtl  = UART_HWCONTROL_NONE;
      uart->huart.Init.Mode       = UART_MODE_TX_RX;
      uart->huart.Init.OverSampling = UART_OVERSAMPLING_16;
    
      switch (cfg->data_bits)
      {
      case DATA_BITS_8:
          uart->huart.Init.WordLength = UART_WORDLENGTH_8B;
          break;
      case DATA_BITS_9:
          uart->huart.Init.WordLength = UART_WORDLENGTH_9B;
          break;
      default:
          uart->huart.Init.WordLength = UART_WORDLENGTH_8B;
          break;
      }
      switch (cfg->stop_bits)
      {
      case STOP_BITS_1:
          uart->huart.Init.StopBits   = UART_STOPBITS_1;
          break;
      case STOP_BITS_2:
          uart->huart.Init.StopBits   = UART_STOPBITS_2;
          break;
      default:
          uart->huart.Init.StopBits   = UART_STOPBITS_1;
          break;
      }
      switch (cfg->parity)
      {
      case PARITY_NONE:
          uart->huart.Init.Parity     = UART_PARITY_NONE;
          break;
      case PARITY_ODD:
          uart->huart.Init.Parity     = UART_PARITY_ODD;
          break;
      case PARITY_EVEN:
          uart->huart.Init.Parity     = UART_PARITY_EVEN;
          break;
      default:
          uart->huart.Init.Parity     = UART_PARITY_NONE;
          break;
      }
    
      if (HAL_UART_Init(&uart->huart) != HAL_OK)
      {
          return RT_ERROR;
      }
    
      return RT_EOK;
}

static rt_err_t stm32_control(struct rt_serial_device *serial, int cmd, void *arg)
{
    struct stm32_uart* uart;
//    rt_uint32_t ctrl_arg = (rt_uint32_t)(arg);

    RT_ASSERT(serial != RT_NULL);
    uart = (struct stm32_uart *)serial->parent.user_data;

    switch (cmd)
    {
        /* disable interrupt */
    case RT_DEVICE_CTRL_CLR_INT:
        /* disable rx irq */
        NVIC_DisableIRQ(uart->irq);
        /* disable interrupt */
        __HAL_UART_DISABLE_IT(&uart->huart, USART_IT_RXNE);
        break;
        /* enable interrupt */
    case RT_DEVICE_CTRL_SET_INT:
        /* enable rx irq */
        NVIC_EnableIRQ(uart->irq);
        /* enable interrupt */
        __HAL_UART_ENABLE_IT(&uart->huart, USART_IT_RXNE);
        break;
    }
    return RT_EOK;
}

static int stm32_putc(struct rt_serial_device *serial, char c)
{
    struct stm32_uart* uart;

    RT_ASSERT(serial != RT_NULL);
    uart = (struct stm32_uart *)serial->parent.user_data;
    while(__HAL_UART_GET_FLAG(&uart->huart,UART_FLAG_TXE) == RESET);
    uart->huart.Instance->DR = c;
    return 1;
}

static int stm32_getc(struct rt_serial_device *serial)
{
    int ch;
    struct stm32_uart* uart;
    RT_ASSERT(serial != RT_NULL);
    uart = (struct stm32_uart *)serial->parent.user_data;
    ch = -1;
    if (__HAL_UART_GET_FLAG(&uart->huart,UART_FLAG_RXNE) != RESET)
    {
        ch = uart->huart.Instance->DR & 0xff;
    }
    return ch;
}

static void uart_isr(struct rt_serial_device *serial) {
    struct stm32_uart *uart = (struct stm32_uart *) serial->parent.user_data;

    RT_ASSERT(uart != RT_NULL);

    if((__HAL_UART_GET_FLAG(&uart->huart, UART_FLAG_RXNE) != RESET) && (__HAL_UART_GET_IT_SOURCE(&uart->huart,UART_IT_RXNE) != RESET))
    {
        rt_hw_serial_isr(serial, RT_SERIAL_EVENT_RX_IND);
        __HAL_UART_CLEAR_FLAG(&uart->huart,UART_FLAG_RXNE);
    }
}

void rt_hw_usart_init(void)
{
    struct stm32_uart* uart;
    struct serial_configure config = RT_SERIAL_CONFIG_DEFAULT;
	__HAL_RCC_GPIOD_CLK_ENABLE();
  __HAL_RCC_GPIOA_CLK_ENABLE();
#if defined(RT_USING_UART1)
    uart = &uart1;
    config.baud_rate = BAUD_RATE_115200;
    serial1.ops    = &stm32_uart_ops;
    serial1.config = config;
    MX_USART_UART_Init(&uart->huart);
    /* register UART1 device */
    rt_hw_serial_register(&serial1, "uart1",
                          RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX ,
                          uart);
#endif /* RT_USING_UART1 */

#if defined(RT_USING_UART2)
uart = &uart2;
config.baud_rate = BAUD_RATE_115200;
serial2.ops    = &stm32_uart_ops;
serial2.config = config;
MX_USART_UART_Init(&uart->huart);
/* register UART1 device */
rt_hw_serial_register(&serial2, "uart2",
                      RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX ,
                      uart);
#endif /* RT_USING_UART1 */

#if defined(RT_USING_UART3)
uart = &uart3;
config.baud_rate = BAUD_RATE_115200;
serial3.ops    = &stm32_uart_ops;
serial3.config = config;
MX_USART_UART_Init(&uart->huart);
/* register UART1 device */
rt_hw_serial_register(&serial3, "uart3",
                      RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_INT_RX ,
                      uart);
#endif /* RT_USING_UART1 */

}
